--- a/NightLife.WEB/public/index.html
+++ b/NightLife.WEB/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="icon.png" type="image/png" sizes="64x64">
+	  <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
